# GotenNet

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: test.yaml  train.yaml
configs/callbacks/: default.yaml
configs/data/: md22.yaml  qm9.yaml  rmd17.yaml
configs/datamodule/: qm9.yaml
configs/experiment/: gotennet_u0.yaml  qm9.yaml  qm9_u0.yaml
configs/hydra/: default.yaml
configs/hydra/job_logging/: logger.yaml
configs/logger/: wandb.yaml
configs/model/: gotennet.yaml
configs/paths/: default.yaml
configs/trainer/: ddp.yaml  default.yaml  gpu.yaml
gotennet/: __init__.py  testing_pipeline.py  training_pipeline.py
gotennet/models/: goten_model.py
gotennet/models/components/: layers.py
gotennet/models/representation/: gotennet.py
gotennet/scripts/: train.py
gotennet/utils/: __init__.py  file.py  logging_utils.py  pylogger.py  utils.py
src/: eval.py  train.py
src/data/: datamodule.py
src/data/components/: md17.py  md22.py  qm9.py  rmd17.py  utils.py
src/models/: gotennet_module.py
src/models/components/: callbacks.py  layers.py  ops.py  outputs.py
src/models/representation/: gotennet.py  gotennetv1.py
src/models/tasks/: MD17Task.py  Molecule3DTask.py  QM9Task.py  Task.py  __init__.py
src/utils/: utils.py
